Customize template files on other projects

--- a/02-progress-steps/style.css
+++ b/02-progress-steps/style.css
@@ -12,11 +12,20 @@ body {
   font-family: "Muli", sans-serif;
   background-color: #f6f7fb;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
