--- a/04-hidden-search-widget/style.css
+++ b/04-hidden-search-widget/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Muli&display=swap");
 
 :root {
+  --blue-200: #023e8a;
+  --blue-300: #0077b6;
   --blue-500: #00b4d8;
   --blue-600: #48cae4;
   --blue-800: #ade8f4;
@@ -20,6 +22,7 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  min-height: 300px;
 }
 
 h1 {
@@ -42,16 +45,15 @@ main {
   position: relative;
   background-color: #fff;
   border-radius: 5px;
-  transition: width 0.3s ease 0.2s
 }
 
 .search .input,
 .search .btn {
   font-family: "Muli";
-  border: none;
+  border: 0;
   border-radius: 5px;
   height: 50px;
-  width: 50px;  border: 0;
+  width: 50px;
 }
 
 .search .input {
@@ -67,10 +69,12 @@ main {
   position: absolute;
   top: 0;
   left: 0;
+  color: var(--blue-900);
+  background-color: var(--blue-500);
 }
 
 .search .btn:hover {
-  color: var(--blue-500);
+  color: var(--blue-300);
 }
 
 .search .btn:active {
@@ -82,9 +86,6 @@ main {
   outline: none;
 }
 
-.search.active {
-  transform: scaleY(225px);
-}
 .search.active .input {
   width: 200px;
   border-radius: 5px 0 0 5px;
