--- a/style.css
+++ b/style.css
@@ -11,10 +11,13 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  line-height: 1.8;
 }
 
 main {
-  flex-grow: 1;
+  max-width: 1100px;
+  margin-left: 20px;
+  margin-right: 20px;
   /* display: flex;
   flex-direction: column;
   justify-content: center;
