--- a/08-form-wave-animation/style.css
+++ b/08-form-wave-animation/style.css
@@ -83,7 +83,7 @@ body {
 
 .form-control label {
   position: absolute;
-  top: 15px;
+  top: 10px;
   left: 0;
   color: rgba(255,255,255,0.5)
 }
@@ -96,8 +96,7 @@ body {
 }
 
 .form-control input:focus + label span,
-.form-control input:valid + label span,
-.form-control input:not(:empty) + label span {
+.form-control input:valid + label span {
   transform: translateY(-40px);
   font-size: 16px;
 }
