--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  background-color: #61994e;
+  color: #f2e8cf;
   font-family: "Muli", sans-serif;
   display: flex;
   flex-direction: column;
@@ -14,12 +16,91 @@ body {
   line-height: 1.8;
 }
 
-main {
-  max-width: 1100px;
-  margin-left: 20px;
-  margin-right: 20px;
-  /* display: flex;
+p.introduction {
+  text-align: center;
+}
+
+#projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: space-between;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.project {
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; */
+  align-items: space-between;
+  position: relative;
+
+  background-color: #f2e8cf;
+  border-radius: 0.25rem;
+  box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+  margin: 10px;
+}
+
+.project img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 150px;
+  overflow: hidden;
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+  align-self: center;
+}
+
+.project .info {
+  padding: 10px;
+  flex-grow: 2;
+}
+
+.project .info .title {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-weight: 600;
+  margin: 0;
+  color: #386641
+}
+
+.project .description {
+  line-height: 1.3rem;
+  color: #6a994e;
+}
+
+.project .footer {
+  background-color: #6a994e55;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px 5px;
+  font-size: 0.8rem;
+}
+
+.project .footer a {
+  text-decoration: none;
+  padding: 0 0.3rem;
+  color: #bc4749;
+  transition: 0.2s ease-in-out;
+  border-radius: .25rem;
+}
+
+.project .footer a:hover {
+  opacity: 0.8;
+  background-color: ivory;
+}
+
+.project .footer .number {
+  padding: 0 0.3rem;
+  border-radius: 5px;
+  font-size: 0.6rem;
+  color: #386641;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
