--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ body {
 
 p.introduction {
   text-align: center;
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 0 20px 20px;
+}
+
+.introduction a {
+  text-decoration: none;
+  color: #f2e8cf;
 }
 
 #projects-container {
